tests/indeterminate_module_type/es_default_after_cjs.js
// @flow
module.exports = 0;
export default 0; // error
(0: string); // error
